# clove

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  input.txt
.github/workflows/: rust.yml
examples/: benchmark.rs  demo.rs  framework_test.rs  gpu_stress_test.rs  hello.rs  language_test.rs  mnist.rs  mnist_cnn.rs  ode_test.rs  rope_test.rs  train_gpt.rs  transformer.rs  xla_execute.rs  xla_test.rs  xla_transformer.rs
src/: add.wgsl  add_grad.wgsl  backend.rs  data.rs  device.rs  distributed.rs  export.rs  ffi.rs  lazy.rs  lib.rs  matmul.wgsl  mul.wgsl  nn.rs  optim.rs  sgd.wgsl  tensor.rs
src/nn/: attention.rs  embedding.rs  loss.rs  model.rs  moe.rs  ode.rs
tests/: engine_tests.rs
