[package]
name = "clove"
version = "0.1.0"
edition = "2024"
description = "A high-performance, hardware-agnostic Machine Learning framework written purely in Rust."
license = "MIT"
repository = "https://github.com/rakeshpdey/clove"
readme = "README.md"
keywords = ["machine-learning", "neural-network", "webgpu", "tensor"]
categories = ["science", "mathematics", "wasm"]

[dependencies]
bytemuck = "1.25.0"
memmap2 = "0.9.11"
ndarray = "0.17.2"
num-complex = "0.4.6"
num-traits = "0.2.19"
num_cpus = "1.17.0"
pollster = "0.4.0"
rand = { version = "0.10", features = ["thread_rng"] }
rand_distr = "0.6.0"
rayon = "1.12.0"
safetensors = "0.8.0"
wgpu = "29.0.3"
tokenizers = { version = "0.23.1", features = ["http"] }
tokio = { version = "1.52.3", features = ["full"] }
prost = "0.14.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.126"
web-sys = { version = "0.3", features = ["Window", "Document", "Gpu", "GpuDevice", "GpuAdapter"] }
js-sys = "0.3.103"

[lib]
name = "clove"
crate-type = ["rlib", "cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

exclude = [
    "data/**"
]